<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnScan"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/btnScan" />

    <Button
        android:id="@+id/btnRight"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignBaseline="@+id/btnScan"
        android:layout_alignBottom="@+id/btnScan"
        android:layout_toRightOf="@+id/btnScan"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:text="@string/btnRight" />

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignBaseline="@+id/btnScan"
        android:layout_alignBottom="@+id/btnScan"
        android:layout_toLeftOf="@+id/btnScan"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:text="@string/btnLeft" />

    <Button
        android:id="@+id/btnForward"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/btnScan"
        android:layout_alignLeft="@+id/btnScan"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:text="@string/btnForward" />

    <Button
        android:id="@+id/btnBackward"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/btnScan"
        android:layout_below="@+id/btnScan"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:text="@string/btnBackward" />

    <TextView
        android:id="@+id/lblStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblSent"
        android:layout_alignLeft="@+id/lblSent"
        android:text="@string/lblStatus" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblStatus"
        android:layout_alignBottom="@+id/lblStatus"
        android:layout_toRightOf="@+id/lblStatus"
        android:layout_marginLeft="10dp"
        android:text="@string/txtStatus" />

    <TextView
        android:id="@+id/lblSent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblReceived"
        android:layout_alignLeft="@+id/lblReceived"
        android:text="@string/lblSent" />

    <TextView
        android:id="@+id/txtSent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblSent"
        android:layout_alignBottom="@+id/lblSent"
        android:layout_toRightOf="@+id/lblSent"
        android:layout_marginLeft="10dp"
        android:text="@string/txtSent" />

    <TextView
        android:id="@+id/lblReceived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/lblReceived" />

    <TextView
        android:id="@+id/txtReceived"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblReceived"
        android:layout_alignBottom="@+id/lblReceived"
        android:layout_toRightOf="@+id/lblReceived"
        android:layout_marginLeft="10dp"
        android:text="@string/txtReceived" />

</RelativeLayout>

